@@ -3,7 +3,7 @@
 
 # Python module src/gpodder/gpodder.py
 # Autogenerated from gpodder.glade
-# Generated on Wed Mar 29 15:45:16 2006
+# Generated on Wed Mar 29 16:17:51 2006
 
 # Warning: Do not modify any context comment such as #--
 # They are required to keep user's code
@@ -525,8 +525,10 @@ class Gpodder(SimpleGladeApp):
         selection_tuple = self.treeDownloads.get_selection().get_selected()
         selection_iter = selection_tuple[1]
         if selection_iter != None:
-            url = self.download_status_manager.tree_model.get_value( selection_iter, 3)
-            self.download_status_manager.cancel_by_url( url)
+            url = self.download_status_manager.get_url_by_iter( selection_iter)
+            title = self.download_status_manager.get_title_by_iter( selection_iter)
+            if self.showConfirmation( "Do you really want to cancel this download?\n\n" + title):
+                self.download_status_manager.cancel_by_url( url)
         else:
             self.showMessage( "No episode selected - nothing cancelled.")
     #-- Gpodder.on_treeDownloads_row_activated }
