@@ -1,3 +1,7 @@
+Wed, 29 Mar 2006 16:19:07 +0200 <thp@perli.net>
+	* Locking of tree_model access in libwget - should be more stable
+	* Ask for confirmation when cancelling a ongoing download
+
 Wed, 29 Mar 2006 15:21:32 +0200 <thp@perli.net>
 	* Re-designed gPodder properties dialog
 	+ Added option to create a symlink on users' desktop to downloaddir
